needs edit, cancel, and delete

--- a/app/index.html
+++ b/app/index.html
@@ -7,13 +7,19 @@
     <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
-    <header><h2>Image App</h2></header>
+    <div class="fluid-container head-bar">
+      <header>
+        <h2 class="header-bar">Image App</h2>
+        <button class="create"><a href="#" class="but-link">Add Image</a></button>
+      </header>
+    </div>
     <div class="container">
-      <div id="app" class="app"></div>
-
-      
-
-
+      <div class="row">
+        <div class="col-md-12 col-xs-12 col-sm-12 main-contain">
+          <div id="app" class="app">
+          </div>
+        </div>
+      </div>
     </div>
 
 
