--- a/app/index.html
+++ b/app/index.html
@@ -4,22 +4,23 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
     <title>7 1 React Image Board</title>
+    <link href="https://fonts.googleapis.com/css?family=Arizonia" rel="stylesheet">
+    <link rel="stylesheet" href="./fonts/font-awesome-4.7.0 2/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
     <div class="fluid-container head-bar">
-      <header>
+      <header class="head-container">
         <h2 class="header-bar">Image App</h2>
-        <button class="create"><a href="#" class="but-link">Add Image</a></button>
+        <button class="create"><a href="#" class="but-link"><i class="fa fa-plus-circle" aria-hidden="true"></i>  <i class="fa fa-picture-o fa-3x" aria-hidden="true"></i></a></button>
       </header>
     </div>
     <div class="container">
-      <div class="row">
-        <div class="col-md-12 col-xs-12 col-sm-12 main-contain">
-          <div id="app" class="app">
-          </div>
+      <div class="col-md-12 col-xs-12 col-sm-12 main-contain">
+        <div id="app" class="app">
         </div>
       </div>
+
     </div>
 
 
